--- a/lambda-chat/Dockerfile
+++ b/lambda-chat/Dockerfile
@@ -4,6 +4,8 @@ FROM amazon/aws-lambda-python:3.11
 RUN /var/lang/bin/python3.11 -m pip install --upgrade pip
 RUN /var/lang/bin/python3.11 -m pip install PyPDF2
 RUN /var/lang/bin/python3.11 -m pip install langchain
+RUN /var/lang/bin/python3 -m pip install faiss-cpu
+RUN /var/lang/bin/python3 -m pip install opensearch-py
 
 WORKDIR /var/task/lambda-chat
 
